fixed spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1470,7 +1470,7 @@ button {
   }
 
   #about-link{
-    padding-left: 50px;
+    padding-left: 60px;
   }
 
   #cartposition {
